--- a/app/src/main/res/layout/fragment_display_itins.xml
+++ b/app/src/main/res/layout/fragment_display_itins.xml
@@ -9,8 +9,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_itins"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
