--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -75,5 +75,11 @@
         android:textColor="@color/colorFunText"
         android:fontFamily="@font/primary"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/profile_saved"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/recyclerHorizHeight"
+        android:orientation="horizontal"/>
+
 
 </LinearLayout>
