--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,6 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <!-- cards -->
-    <dimen name="card_icons">40dp</dimen>
-    <dimen name="card_text">18sp</dimen>
 
     <!-- fun text sizes -->
     <dimen name="fun_text">24sp</dimen>
@@ -17,13 +14,31 @@
     <!--padding, margins and formatting-->
     <dimen name="roundCorners">9dp</dimen>
 
-    <dimen name="cardHorizPaddingRight">9dp</dimen>
-    <dimen name="recyclerHorizHeight">100dp</dimen>
+
+        <!-- cards -->
+        <dimen name="card_text">18sp</dimen>
+        <dimen name="cardTextPadding">9dp</dimen>
+
+        <dimen name="cardHorizSize">20dp</dimen>
+        <dimen name="cardHorizPadding">5dp</dimen>
+        <dimen name="recyclerHorizHeight">100dp</dimen>
 
 
-    <dimen name="marginSettingsColorSwatches">10dp</dimen>
+        <dimen name="card_icons">40dp</dimen>
+        <dimen name="card_icon_margin_right">7dp</dimen>
+        <dimen name="card_numLikes_margin_right">5dp</dimen>
+        <dimen name="card_numLikes_textSize">14sp</dimen>
+        <dimen name="card_thumb_margin_bottom">15dp</dimen>
+        <dimen name="card_bkmk_margin_top">10dp</dimen>
+        <dimen name="cardItinSize">150dp</dimen>
+        <dimen name="cardItinPadding">5dp</dimen>
+
+
 
     <!-- profile page -->
     <dimen name="profile_img_size">100dp</dimen>
+
+    <!--settings page -->
+    <dimen name="marginSettingsColorSwatches">10dp</dimen>
 
 </resources>
