--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -94,11 +94,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:fontFamily="@font/manjaribold"
+        android:fontFamily="@font/primary"
         android:text="Travelr"
         android:textAlignment="center"
-        android:textSize="48sp"
-        android:textColor="#194FA2"
+        android:textSize="@dimen/titleTextSize"
+        android:textColor="@color/colorTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
