--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- please only use these colors in the app. -->
+    <!-- general colors -->
     <color name="colorPrimary">@color/colorGreen</color>
     <color name="colorPrimaryDark">@color/colorGreenDark</color>
     <color name="colorAccent">@color/colorTealLight</color>
@@ -8,10 +8,25 @@
 
     <color name="colorBg">@color/colorOffWhite</color>
 
+    <color name="colorTitle">@color/colorBlueBrightDark</color>
     <color name="colorFunText">@color/colorGreenLight</color>
     <color name="colorButton">@color/colorBlueBright</color>
 
-    <!-- these are the hex codes from the color pallets on figma -->
+
+    <!-- these colors are for the gradient in the nav drawer -->
+    <color name="centerColor">@color/colorPrimary</color>
+    <color name="endColor">@color/colorPrimaryDark</color>
+    <color name="startColor">@color/colorPrimary</color>
+
+    <!-- these are the hex codes from specific colors. use to populate sections above this line -->
+    <!-- NOTE:
+        please do not directly use these colors! please only use colors in the
+        above section! if you don't have a color you want in the above section,
+        please make it and put the color you want from this section in it
+        eg:
+        want a blue button, but there is no colorButton above? make one! and put your
+        desired blue into it.
+        -->
     <color name= "colorGreenLight">#007973</color>
     <color name= "colorGreen">#004E53</color>
     <color name= "colorGreenDark">#093E42</color>
@@ -21,17 +36,15 @@
 
     <color name="colorBlueLight">#D3E3F1</color>
     <color name="colorBlue">#184FA2</color>
-    <color name="colorBlueBright">#3B88CC</color>
     <color name="colorBlueDark">#1C2974</color>
+
+    <color name="colorBlueBright">#3B88CC</color>
+    <color name="colorBlueBrightDark">#194FA2</color>
 
     <color name="colorPurple">#BA91DC</color>
 
     <color name="colorGrey">#E2E3E3</color>
     <color name="colorOffWhite">#F6F6F6</color>
 
-    <!-- these colors are for the nav drawer -->
-    <color name="centerColor">@color/colorPrimary</color>
-    <color name="endColor">@color/colorPrimaryDark</color>
-    <color name="startColor">@color/colorPrimary</color>
 
 </resources>
