--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,9 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
-    <dimen name="fab_margin">16dp</dimen>
 
-
-    <!-- fun text sizes -->
+    <!-- text -->
+    <dimen name="titleTextSize">48sp</dimen>
     <dimen name="fun_text">24sp</dimen>
     <dimen name="fun_text_box_height">30sp</dimen>
 
