--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,29 +10,32 @@
     <dimen name="fun_text">24sp</dimen>
     <dimen name="fun_text_box_height">30sp</dimen>
 
-    <!--padding, margins and formatting-->
+    <!--general shapes-->
     <dimen name="roundCorners">9dp</dimen>
 
 
-        <!-- cards -->
-        <dimen name="card_text">18sp</dimen>
-        <dimen name="cardTextPadding">9dp</dimen>
+    <!-- cards -->
+    <dimen name="card_text">18sp</dimen>
+    <dimen name="cardTextPadding">9dp</dimen>
 
-        <dimen name="cardHorizSize">20dp</dimen>
-        <dimen name="cardHorizPadding">5dp</dimen>
-        <dimen name="recyclerHorizHeight">100dp</dimen>
-
-
-        <dimen name="card_icons">40dp</dimen>
-        <dimen name="card_icon_margin_right">7dp</dimen>
-        <dimen name="card_numLikes_margin_right">5dp</dimen>
-        <dimen name="card_numLikes_textSize">14sp</dimen>
-        <dimen name="card_thumb_margin_bottom">15dp</dimen>
-        <dimen name="card_bkmk_margin_top">10dp</dimen>
-        <dimen name="cardItinSize">150dp</dimen>
-        <dimen name="cardItinPadding">5dp</dimen>
+    <dimen name="cardHorizSize">20dp</dimen>
+    <dimen name="cardHorizPadding">5dp</dimen>
+    <dimen name="recyclerHorizHeight">100dp</dimen>
 
 
+    <dimen name="card_icons">40dp</dimen>
+    <dimen name="card_icon_margin_right">7dp</dimen>
+    <dimen name="card_numLikes_margin_right">5dp</dimen>
+    <dimen name="card_numLikes_textSize">14sp</dimen>
+    <dimen name="card_thumb_margin_bottom">15dp</dimen>
+    <dimen name="card_bkmk_margin_top">10dp</dimen>
+    <dimen name="cardItinSize">150dp</dimen>
+    <dimen name="cardItinPadding">5dp</dimen>
+
+    <!-- login page -->
+    <dimen name="login_boxes_width">250dp</dimen>
+    <dimen name="login_buttons_width">75dp</dimen>
+    <dimen name="login_big_button_margin">25dp</dimen>
 
     <!-- profile page -->
     <dimen name="profile_img_size">100dp</dimen>
