--- a/app/src/main/res/layout/fragment_display_itin.xml
+++ b/app/src/main/res/layout/fragment_display_itin.xml
@@ -3,4 +3,70 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/cover_img"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/cardItinSize"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:scaleType="fitXY"
+            android:src="@drawable/sceniclookouts" />
+
+
+        <TextView
+            android:id="@+id/Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="0dp"
+            android:layout_marginLeft="@dimen/cardTextPadding"
+            android:text="Itin Title"
+            android:fontFamily="@font/primary"
+            android:textColor="@color/colorBg"
+            android:textSize="@dimen/card_text"/>
+
+        <ImageView
+            android:id="@+id/like"
+            android:layout_width="@dimen/card_icons"
+            android:layout_height="@dimen/card_icons"
+            android:layout_alignBottom="@+id/cover_img"
+            android:layout_alignEnd="@+id/cover_img"
+            android:layout_marginRight="@dimen/card_icon_margin_right"
+            android:layout_marginBottom="@dimen/card_thumb_margin_bottom"
+            android:src="@drawable/like" />
+
+
+        <ImageView
+            android:id="@+id/bkmark"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignRight="@+id/like"
+            android:layout_marginRight="@dimen/card_icon_margin_right"
+            android:layout_marginTop="@dimen/card_bkmk_margin_top"
+            android:src="@drawable/figmabkmkwhite" />
+
+
+
+        <TextView
+            android:id="@+id/numLikes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/like"
+            android:layout_alignLeft="@+id/like"
+            android:layout_alignBottom="@+id/cover_img"
+            android:gravity="center"
+            android:layout_marginRight="@dimen/card_numLikes_margin_right"
+            android:text="100"
+            android:fontFamily="@font/primary"
+            android:textColor="@color/colorBg"
+            android:textSize="@dimen/card_numLikes_textSize"/>
+
+    </RelativeLayout>
 </LinearLayout>
