--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -32,13 +32,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            >
+            android:layout_gravity="start|right"
+            android:layout_marginStart="30dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginEnd="50dp">
 
             <TextView
                 android:id="@+id/textName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="45dp"
                 android:fontFamily="@font/manjaribold"
                 android:text="Name"
@@ -51,7 +54,7 @@
                 android:layout_alignBaseline="@id/textName"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="0dp"
                 android:background="@drawable/rounded_corner_input"
                 android:ems="10"
                 android:hint="Family Getaway"
@@ -62,7 +65,7 @@
                 android:id="@+id/textLocation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="30dp"
                 android:layout_marginTop="110dp"
                 android:fontFamily="@font/manjaribold"
                 android:text="Location"
@@ -74,16 +77,25 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@id/textLocation"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="40dp"
+                android:layout_marginEnd="0dp"
                 android:background="@drawable/rounded_corner_input"
                 android:ems="10"
                 android:hint="Bay Area, CA"
                 android:inputType="textPersonName"
                 android:textAlignment="center" />
 
+
         </RelativeLayout>
 
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/stops"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+
+        </androidx.recyclerview.widget.RecyclerView>
 
 
 
