--- a/app/src/main/res/layout/fragment_review_itinerary.xml
+++ b/app/src/main/res/layout/fragment_review_itinerary.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-
-
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/colorBg"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
@@ -34,7 +32,6 @@
 
             android:layout_gravity="start|right"
             android:layout_marginStart="30dp"
-            android:layout_marginLeft="0dp"
             android:layout_marginEnd="50dp">
 
             <TextView
@@ -92,6 +89,10 @@
             android:id="@+id/stops"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginRight="10dp"
             android:orientation="horizontal">
 
 
