--- a/app/src/main/res/layout/fragment_display_itins.xml
+++ b/app/src/main/res/layout/fragment_display_itins.xml
@@ -7,7 +7,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/search_itins"
+        android:id="@+id/stops"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
