--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <!-- background of textEdits or other user input sections -->
 
     <color name="colorInputBG">@color/colorGrey</color>
+    <color name="colorGreyStroke">@color/colorDarkGrey</color>
 
     <!-- these are the hex codes from specific colors. use to populate sections above this line -->
     <!-- NOTE:
@@ -31,6 +32,7 @@
         want a blue button, but there is no colorButton above? make one! and put your
         desired blue into it.
         -->
+
     <color name= "colorGreenLight">#007973</color>
     <color name= "colorGreen">#004E53</color>
     <color name= "colorGreenDark">#093E42</color>
@@ -47,6 +49,8 @@
     <color name="colorPurple">#BA91DC</color>
 
     <color name="colorGrey">#E2E3E3</color>
+    <color name="colorDarkGrey">#828181</color>
+
     <color name="colorOffWhite">#F6F6F6</color>
 
 
