--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -37,6 +37,12 @@
     <dimen name="login_buttons_width">75dp</dimen>
     <dimen name="login_big_button_margin">25dp</dimen>
 
+    <!-- home page -->
+    <dimen name="search_button_width">70dp</dimen>
+    <dimen name="search_button_height">30dp</dimen>
+
+    <dimen name="search_bar_width">250dp</dimen>
+
     <!-- profile page -->
     <dimen name="profile_img_size">100dp</dimen>
 
