working on getting the args to pass into displaySingleItin

--- a/app/src/main/res/layout/fragment_display_itin.xml
+++ b/app/src/main/res/layout/fragment_display_itin.xml
@@ -70,4 +70,11 @@
             android:textSize="@dimen/card_numLikes_textSize"/>
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/body"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/primary"
+        />
 </LinearLayout>
