--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,12 +52,6 @@
     <fragment
         android:id="@+id/fragment_display_single_itin"
         android:name="cs160.final_proj_drawer.ui.itin.DisplaySingleItinFragment"
-        tools:layout="@layout/fragment_display_itin" >
-        <argument
-            android:name="itinerary"
-            app:argType="cs160.final_proj_drawer.logic.ItineraryObject"
-            app:nullable="true"
-            android:defaultValue="@null" />
-    </fragment>
+        tools:layout="@layout/fragment_display_itin" />
 
 </navigation>
